--- a/Assignment 3/Dakshina.ipynb
+++ b/Assignment 3/Dakshina.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "decent-france",
    "metadata": {},
    "outputs": [],
@@ -15,13 +15,14 @@
     "import wandb\n",
     "from wandb.keras import WandbCallback\n",
     "from matplotlib import pyplot\n",
-    "import os\n",
-    "import numpy as np"
+    "import os, time\n",
+    "import numpy as np\n",
+    "from IPython.display import HTML as html_print, display, clear_output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "beautiful-measure",
    "metadata": {},
    "outputs": [],
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "analyzed-river",
    "metadata": {},
    "outputs": [],
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "verbal-oxygen",
    "metadata": {},
    "outputs": [],
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "declared-roulette",
    "metadata": {},
    "outputs": [],
@@ -546,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "comparative-representative",
    "metadata": {},
    "outputs": [],
@@ -668,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "incomplete-airport",
    "metadata": {},
    "outputs": [],
@@ -730,10 +731,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "regulated-runner",
+   "execution_count": 8,
+   "id": "attempted-commitment",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:AutoGraph could not transform <bound method AttentionLayer.call of <__main__.AttentionLayer object at 0x0000020C13A690A0>> and will run it as-is.\n",
+      "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
+      "Cause: module 'gast' has no attribute 'Index'\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
+      "WARNING: AutoGraph could not transform <bound method AttentionLayer.call of <__main__.AttentionLayer object at 0x0000020C13A690A0>> and will run it as-is.\n",
+      "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
+      "Cause: module 'gast' has no attribute 'Index'\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
+      "Epoch 1/10\n",
+      "853/853 [==============================] - 67s 78ms/step - loss: 0.8707 - accuracy: 0.7551 - val_loss: 0.7684 - val_accuracy: 0.8039\n",
+      "Epoch 2/10\n",
+      "853/853 [==============================] - 65s 77ms/step - loss: 0.5926 - accuracy: 0.8231 - val_loss: 0.5799 - val_accuracy: 0.8394\n",
+      "Epoch 3/10\n",
+      "853/853 [==============================] - 68s 79ms/step - loss: 0.4667 - accuracy: 0.8600 - val_loss: 0.4391 - val_accuracy: 0.8876\n",
+      "Epoch 4/10\n",
+      "853/853 [==============================] - 67s 78ms/step - loss: 0.4068 - accuracy: 0.8779 - val_loss: 0.3856 - val_accuracy: 0.9061\n",
+      "Epoch 5/10\n",
+      "853/853 [==============================] - 69s 81ms/step - loss: 0.3668 - accuracy: 0.8900 - val_loss: 0.3376 - val_accuracy: 0.9176\n",
+      "Epoch 6/10\n",
+      "853/853 [==============================] - 71s 83ms/step - loss: 0.3382 - accuracy: 0.8984 - val_loss: 0.3372 - val_accuracy: 0.9170\n",
+      "Epoch 7/10\n",
+      "853/853 [==============================] - 72s 84ms/step - loss: 0.3191 - accuracy: 0.9037 - val_loss: 0.3030 - val_accuracy: 0.9243\n",
+      "Epoch 8/10\n",
+      "853/853 [==============================] - 72s 85ms/step - loss: 0.3054 - accuracy: 0.9074 - val_loss: 0.2956 - val_accuracy: 0.9275\n",
+      "Epoch 9/10\n",
+      "853/853 [==============================] - 74s 86ms/step - loss: 0.2936 - accuracy: 0.9109 - val_loss: 0.3080 - val_accuracy: 0.9207\n",
+      "Epoch 10/10\n",
+      "853/853 [==============================] - 75s 87ms/step - loss: 0.2860 - accuracy: 0.9131 - val_loss: 0.2899 - val_accuracy: 0.9265\n",
+      "Model: \"functional_1\"\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_1 (InputLayer)            [(None, None, 27)]   0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "input_2 (InputLayer)            [(None, None, 49)]   0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "lstm (LSTM)                     [(None, None, 128),  79872       input_1[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "lstm_1 (LSTM)                   [(None, None, 128),  91136       input_2[0][0]                    \n",
+      "                                                                 lstm[0][1]                       \n",
+      "                                                                 lstm[0][2]                       \n",
+      "__________________________________________________________________________________________________\n",
+      "attention_layer (AttentionLayer ((None, None, 128),  32896       lstm[0][0]                       \n",
+      "                                                                 lstm_1[0][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "concat_layer (Concatenate)      (None, None, 256)    0           lstm_1[0][0]                     \n",
+      "                                                                 attention_layer[0][0]            \n",
+      "__________________________________________________________________________________________________\n",
+      "dense (Dense)                   (None, None, 49)     12593       concat_layer[0][0]               \n",
+      "==================================================================================================\n",
+      "Total params: 216,497\n",
+      "Trainable params: 216,497\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "best_attn_model = myRNN_attn(cell_type = 'LSTM', latent_dim = 128, dropout = 0.3)\n",
     "\n",
@@ -746,8 +808,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "silent-sharp",
+   "execution_count": 9,
+   "id": "prime-baking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,8 +857,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "interesting-skirt",
+   "execution_count": 10,
+   "id": "interesting-mentor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,9 +877,11 @@
     "\n",
     "    stop_condition = False\n",
     "    final_ans = \"\"\n",
+    "    all_attn = []\n",
     "    while not stop_condition:\n",
     "        output_chars, *h, attn_wts = decoder_attn_model.predict([target_seq] + enc_states + [encoder_out])\n",
     "        enc_states = h\n",
+    "        all_attn += [attn_wts]\n",
     "        \n",
     "        sampled_char_index = np.argmax(output_chars[0, -1, :])\n",
     "        sampled_char = reverse_out[sampled_char_index]\n",
@@ -833,7 +897,7 @@
     "            target_seq = np.zeros((1, 1))\n",
     "            target_seq[0, 0] = sampled_char_index\n",
     "    \n",
-    "    return final_ans[:-1]\n",
+    "    return final_ans[:-1], all_attn[:-1]\n",
     "\n",
     "def get_acc_attn(input_seq, test_seq):\n",
     "    n = len(input_seq)\n",
@@ -872,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chief-category",
+   "id": "spanish-business",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,8 +946,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 80,
+   "id": "stylish-daniel",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Connectivity Visualization\n",
+    "\n",
+    "\n",
+    "# get html element\n",
+    "def cstr(s, color='black'):\n",
+    "        return \"<text style=color:#000;background-color:{}>{} </text>\".format(color, s)\n",
+    "\n",
+    "# print html\n",
+    "def print_color(t):\n",
+    "    okay = ''.join([cstr(ti, color=ci) for ti,ci in t])\n",
+    "    okay = \"<p style=text-align:center;font-size:30px>\" + okay + \"</p>\"\n",
+    "    display(html_print(okay))\n",
+    "\n",
+    "# get appropriate color for value\n",
+    "def get_clr(value):\n",
+    "    colors = ['#85c2e1', '#89c4e2', '#95cae5', '#99cce6', '#a1d0e8',\n",
+    "            '#b2d9ec', '#baddee', '#c2e1f0', '#eff7fb', '#f9e8e8',\n",
+    "            '#f9e8e8', '#f9d4d4', '#f9bdbd', '#f8a8a8', '#f68f8f',\n",
+    "            '#f47676', '#f45f5f', '#f34343', '#f33b3b', '#f42e2e']\n",
+    "    value = int((value * 100) / 5)\n",
+    "    return colors[value]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "postal-tribune",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Connectivity Visualization\n",
+    "\n",
+    "test_in, test_out, _ = onehot(X_test, y_test)\n",
+    "\n",
+    "cnt = 0\n",
+    "ii = 642\n",
+    "\n",
+    "res, res1 = decode_sequence_attn(test_in[ii: ii + 1])\n",
+    "inp = X_test[ii]\n",
+    "m = len(inp)\n",
+    "n = len(res)\n",
+    "res1 = [res1[jj][0, 0, :m] for jj in range(n)]\n",
+    "\n",
+    "gap = [2, 5, 8, 10, 12]\n",
+    "\n",
+    "def fn():\n",
+    "    for pos in range(n):\n",
+    "        text_colours = [[], []]\n",
+    "        pos1 = pos - 1 if pos in gap else pos\n",
+    "        for kk in range(n):\n",
+    "            text = (res[kk], get_clr(0.99 if kk == pos1 else 0))\n",
+    "            text_colours[0].append(text)\n",
+    "        for kk in range(m):\n",
+    "            text = (inp[kk], get_clr(res1[pos][kk]))\n",
+    "            text_colours[1].append(text)\n",
+    "        clear_output()\n",
+    "        print_color(text_colours[0])\n",
+    "        print_color(text_colours[1])\n",
+    "        time.sleep(1)\n",
+    "    clear_output()\n",
+    "    \n",
+    "fn()\n",
+    "#print(list(res)) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "mobile-battle",
+   "id": "british-amateur",
    "metadata": {},
    "outputs": [],
    "source": []
