--- a/Assignment 4/RBN.ipynb
+++ b/Assignment 4/RBN.ipynb
@@ -13,6 +13,7 @@
     "from tensorflow.keras.datasets import fashion_mnist, mnist\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "import seaborn as sn\n",
     "import wandb"
    ]
@@ -80,6 +81,8 @@
     "            hid = np.random.binomial(1, self.prob_h(v), self.hidden_layer_dim)\n",
     "            v = np.random.binomial(1, self.prob_v(hid), self.input_dim)\n",
     "            v_list.append(v)\n",
+    "            if(self.sampling != 'Gibbs'): # Contrastive divergence takes a point estimate\n",
+    "                break\n",
     "            \n",
     "        all_v = np.array(v_list)\n",
     "        transf_all_v = sig((all_v @ self.w) + self.c)\n",
@@ -112,6 +115,47 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "voluntary-israeli",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The RBN Classifier\n",
+    "\n",
+    "class RBNClassifier:\n",
+    "    \n",
+    "    def __init__(self, RBN_obj, n_classes = 10):\n",
+    "        self.n_classes = n_classes\n",
+    "        self.RBN_obj = RBN_obj\n",
+    "        self.clf = RandomForestClassifier()\n",
+    "        \n",
+    "    def fit(self, X, y):\n",
+    "        self.RBN_obj.learn(X)\n",
+    "        hid = self.RBN_obj.get_hidden(X)\n",
+    "        self.clf.fit(hid, y)\n",
+    "        \n",
+    "    def predict(self, X):\n",
+    "        hid = self.RBN_obj.get_hidden(X)\n",
+    "        return self.clf.predict(hid)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "turned-democrat",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = RBN()\n",
+    "clf = RBNClassifier(model)\n",
+    "clf.fit(X_train_new[:10], Y_train[:10])\n",
+    "print(Y_train[:10])\n",
+    "print(clf.predict(X_train_new[:10]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "opened-cinema",
    "metadata": {},
    "outputs": [],
    "source": []
