Added attenion heatmap

--- a/Assignment 3/Dakshina.ipynb
+++ b/Assignment 3/Dakshina.ipynb
@@ -14,11 +14,13 @@
     "from sklearn.model_selection import train_test_split\n",
     "import wandb\n",
     "from wandb.keras import WandbCallback\n",
-    "from matplotlib import pyplot\n",
+    "from matplotlib import pyplot, font_manager\n",
     "import os, time\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from IPython.display import HTML as html_print, display, clear_output"
+    "from IPython.display import HTML as html_print, display, clear_output\n",
+    "from seaborn import heatmap \n",
+    "from __future__ import unicode_literals"
    ]
   },
   {
@@ -44,7 +46,9 @@
     "y_test, X_test, z_test = test_data[::3], test_data[1::3], [int(each) for each in test_data[2::3]]\n",
     "\n",
     "val_data = ''.join([each.decode('utf-8') for each in open(val_path, 'rb')]).split()\n",
-    "y_val, X_val, z_val = val_data[::3], val_data[1::3], [int(each) for each in val_data[2::3]]"
+    "y_val, X_val, z_val = val_data[::3], val_data[1::3], [int(each) for each in val_data[2::3]]\n",
+    "\n",
+    "font_prop = font_manager.FontProperties(fname='Hind_Madurai/HindMadurai-Regular.ttf')"
    ]
   },
   {
@@ -327,6 +331,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Training the given model\n",
+    "\n",
     "def train(model, batch_size=64, epochs=25, embed_dim=None, wandb_cb = True):\n",
     "    model.compile(optimizer=\"rmsprop\", loss=\"categorical_crossentropy\", metrics=[\"accuracy\"])\n",
     "    if embed_dim == None:\n",
@@ -349,6 +355,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Sweep Configuration of hyperparameters\n",
+    "\n",
     "sweep_config = {\n",
     "    'method': 'bayes',\n",
     "    'metric': {\n",
@@ -466,10 +474,7 @@
     "test_dict = { 'Input' : X_test, 'Prediction' : test_pred, 'True Output' : y_test}\n",
     "vanilla = pd.DataFrame(data=test_dict)\n",
     "\n",
-    "vanilla.to_csv('predictions_vanilla.csv', index=False)\n",
-    "\n",
-    "vanilla_sample = vanilla.sample(10, replace=False)\n",
-    "vanilla_sample"
+    "vanilla.to_csv('predictions_vanilla.csv', index=False)"
    ]
   },
   {
@@ -479,38 +484,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyplot.figure(figsize=[50, 100])\n",
-    "all_classes = list(test_generator.class_indices.keys())\n",
+    "vn = pd.read_csv('predictions_vanilla.csv')\n",
+    "vns = vn.sample(10, replace=False).reset_index(drop=True)\n",
     "\n",
-    "ax = pyplot.subplot(11, 3, 1)\n",
-    "ax1 = pyplot.subplot(11, 3, 2)\n",
-    "ax2 = pyplot.subplot(11, 3, 3)\n",
-    "ax.axis('off')\n",
-    "ax.text(0.3, 0.5, \"Sample Image\", fontsize=70)\n",
-    "ax1.axis('off')\n",
-    "ax1.text(0.3, 0.5, \"Prediction\", fontsize=70)\n",
-    "ax2.axis('off')\n",
-    "ax2.text(0.3, 0.5, \"True Class\", fontsize=70)\n",
+    "def switch_fn(s):\n",
+    "    if s[\"Prediction\"] == s[\"True Output\"]:\n",
+    "        return ['background-color: greenyellow'] * 3\n",
+    "    else:\n",
+    "        return ['background-color: lightcoral'] * 3\n",
     "\n",
-    "for some in os.listdir(test_path):\n",
-    "    idx = test_generator.class_indices[some]\n",
-    "    new_path = test_path + \"/\" + some\n",
-    "    img_path = new_path + \"/\" + os.listdir(new_path)[0]\n",
-    "    img = tf.keras.preprocessing.image.load_img(img_path,\n",
-    "                                                target_size=(max_shape[0],\n",
-    "                                                             max_shape[1]))\n",
-    "    img_np = np.asarray(img)\n",
-    "    ax = pyplot.subplot(11, 3, 3 * idx + 4)\n",
-    "    ax1 = pyplot.subplot(11, 3, 3 * idx + 5)\n",
-    "    ax2 = pyplot.subplot(11, 3, 3 * idx + 6)\n",
-    "    ax.imshow(img_np)\n",
-    "    ax1.axis('off')\n",
-    "    ax1.text(0.3, 0.5, all_classes[y_pred[200 * idx]], fontsize=70)\n",
-    "    ax2.axis('off')\n",
-    "    ax2.text(0.3, 0.5, some, fontsize=70)\n",
+    "vns.style.apply(switch_fn, axis=1)\n",
     "\n",
-    "wandb.init(project='cs6910-a2')\n",
-    "wandb.log({'Sample Predictions': pyplot})"
+    "wandb.init(project='cs6910-a3')\n",
+    "wandb.log({'Sample Predictions' : wandb.Table(dataframe=vns)})"
    ]
   },
   {
@@ -855,10 +841,35 @@
     "test_dict = { 'Input' : X_test, 'Prediction' : test_pred, 'True Output' : y_test}\n",
     "attention = pd.DataFrame(data=test_dict)\n",
     "\n",
-    "attention.to_csv('predictions_attention.csv', index=False)\n",
+    "attention.to_csv('predictions_attention.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "loving-movement",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Attention Heatmap\n",
     "\n",
-    "attention_sample = attention.sample(10, replace=False)\n",
-    "attention_sample"
+    "fig, ax = pyplot.subplots(3, 3, figsize=[20, 20])\n",
+    "ax = ax.flatten()\n",
+    "fig.suptitle('Attention Heat Map Visualization', fontsize=30)\n",
+    "\n",
+    "for kk, ii in enumerate(np.random.choice(len(test_in), 9)):\n",
+    "    res, res1 = decode_sequence_attn(test_in[ii: ii + 1])\n",
+    "    inp = X_test[ii]\n",
+    "    m = len(inp)\n",
+    "    n = len(res)\n",
+    "    res1 = np.array([res1[jj][0, 0, :m] for jj in range(n)])\n",
+    "    \n",
+    "    ax[kk] = heatmap(res1, cbar=True, ax = ax[kk])\n",
+    "    ax[kk].set_xticklabels(inp, fontsize=20)\n",
+    "    ax[kk].set_yticklabels(list(res), fontsize=20, fontproperties = font_prop, rotation=0)\n",
+    "    \n",
+    "wandb.init(project='cs6910-a3')\n",
+    "wandb.log({'Sample Predictions' : wandb.Image(fig)})"
    ]
   },
   {
@@ -933,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "british-amateur",
+   "id": "empty-server",
    "metadata": {},
    "outputs": [],
    "source": []
