Added test accuracy and loss

--- a/Assignment 4/RBN.ipynb
+++ b/Assignment 4/RBN.ipynb
@@ -28,6 +28,12 @@
     "# Creating train and test data\n",
     "\n",
     "(X_train, Y_train), (X_test, Y_test) = fashion_mnist.load_data()\n",
+    "\n",
+    "X_train = np.array(X_train)\n",
+    "Y_train = np.array(Y_train)\n",
+    "X_test = np.array(X_test)\n",
+    "Y_test = np.array(Y_test)\n",
+    "\n",
     "X_train_new = X_train.reshape(\n",
     "    (X_train.shape[0], X_train.shape[1] * X_train.shape[2]))\n",
     "X_test_new = X_test.reshape(\n",
@@ -46,50 +52,56 @@
     "def sig(z):\n",
     "    return np.where(z > 0, 1 / (1 + np.exp(-z)), np.exp(z) / (1 + np.exp(z)))\n",
     "\n",
-    "class RBN:\n",
+    "class RBNClassifier:\n",
     "    \n",
-    "    def __init__(self, hidden_layer_dim = 64, k = 200, r = 10, learning_rate = 0.01, epochs = 1, sampling = 'Gibbs'):\n",
+    "    def __init__(self, hidden_layer_dim = 64, n_classes = 10, k = 200, r = 10, learning_rate = 0.01, epochs = 1, sampling = 'Gibbs'):\n",
     "        self.input_dim = None\n",
     "        self.hidden_layer_dim = hidden_layer_dim\n",
+    "        self.n_classes = n_classes\n",
     "        self.k = k\n",
     "        self.r = 10\n",
     "        self.learning_rate = learning_rate\n",
     "        self.epochs = epochs\n",
     "        self.sampling = sampling\n",
+    "        self.clf = RandomForestClassifier()\n",
+    "        \n",
+    "        if(self.sampling != 'Gibbs'): # Contrastive divergence takes a point estimate\n",
+    "            self.r = 1\n",
     "    \n",
     "    def prob_v(self, h):\n",
-    "        return sig((h @ self.w.T) + self.b)\n",
+    "        return sig(np.matmul(h, self.w.T) + self.b)\n",
     "    \n",
     "    def prob_h(self, x):\n",
-    "        return sig((x @ self.w) + self.c)\n",
+    "        return sig(np.matmul(x, self.w) + self.c)\n",
     "    \n",
     "    def get_hidden(self, X):\n",
-    "        probs = sig(np.sign((X @ self.w) + self.c))\n",
-    "        return np.random.binomial(1, probs, probs.shape)\n",
+    "        probs = sig(np.sign(np.matmul(X, self.w) + self.c))\n",
+    "        return np.asnumpy(np.random.binomial(1, probs, probs.shape))\n",
     "    \n",
-    "    def single_update(self, x):\n",
-    "        v = x\n",
-    "        hid = np.zeros((self.hidden_layer_dim,))\n",
+    "    def simulate_markov(self, X):\n",
+    "        v = X\n",
+    "        hid = np.zeros((X.shape[0], self.hidden_layer_dim))\n",
     "        \n",
     "        for t in range(0, self.k):\n",
-    "            hid = np.random.binomial(1, self.prob_h(v), self.hidden_layer_dim)\n",
-    "            v = np.random.binomial(1, self.prob_v(hid), self.input_dim)\n",
+    "            hid = np.random.binomial(1, self.prob_h(v), hid.shape)\n",
+    "            v = np.random.binomial(1, self.prob_v(hid), v.shape)\n",
     "        \n",
     "        v_list = []\n",
     "        \n",
     "        for t in range(0, self.r):\n",
-    "            hid = np.random.binomial(1, self.prob_h(v), self.hidden_layer_dim)\n",
-    "            v = np.random.binomial(1, self.prob_v(hid), self.input_dim)\n",
+    "            hid = np.random.binomial(1, self.prob_h(v), hid.shape)\n",
+    "            v = np.random.binomial(1, self.prob_v(hid), v.shape)\n",
     "            v_list.append(v)\n",
-    "            if(self.sampling != 'Gibbs'): # Contrastive divergence takes a point estimate\n",
-    "                break\n",
     "            \n",
-    "        all_v = np.array(v_list)\n",
-    "        transf_all_v = sig((all_v @ self.w) + self.c)\n",
-    "        mat_all_v = all_v.reshape((self.r, self.input_dim, 1)) @ transf_all_v.reshape((self.r, 1, self.hidden_layer_dim))\n",
+    "        return np.array(v_list)\n",
+    "    \n",
+    "    def single_update(self, x, all_v):\n",
+    "    \n",
+    "        transf_all_v = sig(np.matmul(all_v, self.w) + self.c)\n",
+    "        mat_all_v = np.matmul(all_v.reshape((self.r, self.input_dim, 1)), transf_all_v.reshape((self.r, 1, self.hidden_layer_dim)))\n",
     "        \n",
-    "        transf_x = sig((x @ self.w) + self.c)\n",
-    "        mat_x = x.reshape((self.input_dim, 1)) @ transf_x.reshape((1, self.hidden_layer_dim))\n",
+    "        transf_x = sig(np.matmul(x, self.w) + self.c)\n",
+    "        mat_x = np.matmul(x.reshape((self.input_dim, 1)), transf_x.reshape((1, self.hidden_layer_dim)))\n",
     "        \n",
     "        self.w += self.learning_rate * (mat_x - mat_all_v.mean(axis=0))\n",
     "        self.b += self.learning_rate * (x - all_v.mean(axis=0))\n",
@@ -100,42 +112,44 @@
     "        self.c = np.zeros((self.hidden_layer_dim,))\n",
     "        self.w = np.zeros((self.input_dim, self.hidden_layer_dim))\n",
     "                    \n",
-    "    def learn(self, X):\n",
+    "    def fit(self, X, y, X_t, y_t):\n",
     "        self.input_dim = X.shape[1]\n",
     "        self.weights_init()\n",
     "        \n",
+    "        num_bars = 30\n",
+    "        \n",
     "        for ep in range(self.epochs):\n",
-    "            for x in X:\n",
-    "                self.single_update(x)\n",
+    "            print('Epoch ', ep + 1, '/', self.epochs)\n",
+    "            \n",
+    "            batch_size = 64\n",
+    "            n_inputs = X.shape[0]\n",
+    "            n_bars = 30\n",
+    "            \n",
+    "            for ii in range(0, n_inputs, batch_size):\n",
+    "                X_curr = X[ii:ii + batch_size]\n",
+    "            \n",
+    "                all_v = self.simulate_markov(X_curr).swapaxes(0, 1)\n",
+    "                \n",
+    "                for jj, x in enumerate(X_curr):\n",
+    "                    self.single_update(x, all_v[jj])\n",
+    "                \n",
+    "                curr = (num_bars * (ii + 1)) // n_inputs\n",
+    "                print('\\r[' + '=' * curr + '.' * (num_bars - curr) + ']', end = '')\n",
+    "            print()\n",
+    "            \n",
+    "            hid = self.get_hidden(X)\n",
+    "            self.clf.fit(hid, np.asnumpy(y))\n",
+    "            \n",
+    "            hid_t = self.get_hidden(X_t)\n",
+    "            \n",
+    "            test_acc = self.clf.score(hid_t, y_t)\n",
+    "            test_loss = -self.clf.predict_proba(hid_t)[range(X_t.shape[0]), y_t].sum()\n",
     "        \n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "voluntary-israeli",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# The RBN Classifier\n",
-    "\n",
-    "class RBNClassifier:\n",
+    "            print('Test Accuracy : ', test_acc, ', Test Loss : ', test_loss)\n",
     "    \n",
-    "    def __init__(self, RBN_obj, n_classes = 10):\n",
-    "        self.n_classes = n_classes\n",
-    "        self.RBN_obj = RBN_obj\n",
-    "        self.clf = RandomForestClassifier()\n",
-    "        \n",
-    "    def fit(self, X, y):\n",
-    "        self.RBN_obj.learn(X)\n",
-    "        hid = self.RBN_obj.get_hidden(X)\n",
-    "        self.clf.fit(hid, y)\n",
-    "        \n",
     "    def predict(self, X):\n",
-    "        hid = self.RBN_obj.get_hidden(X)\n",
-    "        return self.clf.predict(hid)\n",
-    "    "
+    "        hid = self.get_hidden(X)\n",
+    "        return self.predict(hid)"
    ]
   },
   {
@@ -145,17 +159,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = RBN()\n",
-    "clf = RBNClassifier(model)\n",
-    "clf.fit(X_train_new[:10], Y_train[:10])\n",
-    "print(Y_train[:10])\n",
-    "print(clf.predict(X_train_new[:10]))"
+    "clf = RBNClassifier()\n",
+    "clf.fit(X_train_new, Y_train, X_test_new, np.asnumpy(Y_test))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "opened-cinema",
+   "id": "public-ability",
    "metadata": {},
    "outputs": [],
    "source": []
