Added sweep for Gibbs

--- a/Assignment 4/RBN.ipynb
+++ b/Assignment 4/RBN.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# Imports\n",
     "\n",
-    "import numpy as np\n",
+    "import cupy as np\n",
     "from tensorflow.keras.datasets import fashion_mnist, mnist\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -112,7 +112,7 @@
     "        self.c = np.zeros((self.hidden_layer_dim,))\n",
     "        self.w = np.zeros((self.input_dim, self.hidden_layer_dim))\n",
     "                    \n",
-    "    def fit(self, X, y, X_t, y_t):\n",
+    "    def fit(self, X, y, X_t, y_t, wandb_log = False):\n",
     "        self.input_dim = X.shape[1]\n",
     "        self.weights_init()\n",
     "        \n",
@@ -143,9 +143,12 @@
     "            hid_t = self.get_hidden(X_t)\n",
     "            \n",
     "            test_acc = self.clf.score(hid_t, y_t)\n",
-    "            test_loss = -self.clf.predict_proba(hid_t)[range(X_t.shape[0]), y_t].sum()\n",
+    "            test_loss = -self.clf.predict_log_proba(hid_t)[range(X_t.shape[0]), y_t].sum()\n",
     "        \n",
     "            print('Test Accuracy : ', test_acc, ', Test Loss : ', test_loss)\n",
+    "            \n",
+    "            if wandb_log:\n",
+    "                wandb.log({'Test Accuracy' : test_acc, 'Test Loss' : test_loss})\n",
     "    \n",
     "    def predict(self, X):\n",
     "        hid = self.get_hidden(X)\n",
@@ -155,18 +158,82 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "turned-democrat",
+   "id": "honest-acquisition",
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = RBNClassifier()\n",
-    "clf.fit(X_train_new, Y_train, X_test_new, np.asnumpy(Y_test))"
+    "# Sweep Configuration of hyperparameters\n",
+    "\n",
+    "sweep_config = {\n",
+    "    'method': 'bayes',\n",
+    "    'metric': {\n",
+    "        'name': 'Test Accuracy',\n",
+    "        'goal': 'maximize'\n",
+    "    },\n",
+    "    'parameters': {\n",
+    "        'hidden_layer_dim': {\n",
+    "            'values': [ 64, 128, 256],\n",
+    "        },\n",
+    "        'markov_steps': {\n",
+    "            'values': [200, 300]\n",
+    "        },\n",
+    "        'num_samples': {\n",
+    "            'values': [10, 20, 30]\n",
+    "        },\n",
+    "        'num_epochs': {\n",
+    "            'values': [3, 4, 5]\n",
+    "        },\n",
+    "        'learning_rate' : {\n",
+    "            'values': [0.001, 0.01, 0.1]\n",
+    "        }\n",
+    "    }\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "public-ability",
+   "id": "balanced-portal",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sweep_id = wandb.sweep(sweep_config, entity = '0x2e4', project = 'cs6910-a4')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "proof-wellington",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run():\n",
+    "    default_config = {'hidden_layer_dim': 64, 'markov_steps': 200, 'num_samples': 10, 'num_epochs': 5, 'learning_rate' : 0.001}\n",
+    "\n",
+    "    run = wandb.init(project='cs6910-a4', config=default_config)\n",
+    "    config = wandb.config\n",
+    "\n",
+    "    model = RBNClassifier(hidden_layer_dim=config.hidden_layer_dim, k = config.markov_steps, r = config.num_samples, epochs = config.num_epochs, learning_rate = config.learning_rate)\n",
+    "\n",
+    "    model.fit(X_train_new, Y_train, X_test_new, np.asnumpy(Y_test), True)\n",
+    "    \n",
+    "    wandb.agent(sweep_id, run)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "chubby-comfort",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wandb.agent(sweep_id, run)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "frequent-baltimore",
    "metadata": {},
    "outputs": [],
    "source": []
