--- a/Assignment 4/RBN.ipynb
+++ b/Assignment 4/RBN.ipynb
@@ -65,7 +65,9 @@
     "        self.sampling = sampling\n",
     "        self.clf = RandomForestClassifier()\n",
     "        \n",
-    "        if(self.sampling != 'Gibbs'): # Contrastive divergence takes a point estimate\n",
+    "        self.num_steps = self.r\n",
+    "        if sampling != 'Gibbs':\n",
+    "            self.k = 0\n",
     "            self.r = 1\n",
     "    \n",
     "    def prob_v(self, h):\n",
@@ -75,11 +77,15 @@
     "        return sig(np.matmul(x, self.w) + self.c)\n",
     "    \n",
     "    def get_hidden(self, X):\n",
-    "        probs = sig(np.sign(np.matmul(X, self.w) + self.c))\n",
+    "        probs = np.sign(sig(np.matmul(X, self.w) + self.c))\n",
     "        return np.asnumpy(np.random.binomial(1, probs, probs.shape))\n",
     "    \n",
     "    def simulate_markov(self, X):\n",
-    "        v = X\n",
+    "        if self.sampling == 'Gibbs':\n",
+    "            v = np.random.randn(X.shape[0], self.input_dim)\n",
+    "        else:\n",
+    "            v = X\n",
+    "        \n",
     "        hid = np.zeros((X.shape[0], self.hidden_layer_dim))\n",
     "        \n",
     "        for t in range(0, self.k):\n",
@@ -88,10 +94,11 @@
     "        \n",
     "        v_list = []\n",
     "        \n",
-    "        for t in range(0, self.r):\n",
+    "        for t in range(0, self.num_steps):\n",
     "            hid = np.random.binomial(1, self.prob_h(v), hid.shape)\n",
     "            v = np.random.binomial(1, self.prob_v(hid), v.shape)\n",
-    "            v_list.append(v)\n",
+    "            if self.sampling == 'Gibbs' or t + 1 == self.num_steps:\n",
+    "                v_list.append(v)\n",
     "            \n",
     "        return np.array(v_list)\n",
     "    \n",
@@ -108,9 +115,9 @@
     "        self.c += self.learning_rate * (transf_x - transf_all_v.mean(axis=0))\n",
     "        \n",
     "    def weights_init(self):\n",
-    "        self.b = np.zeros((self.input_dim,))\n",
-    "        self.c = np.zeros((self.hidden_layer_dim,))\n",
-    "        self.w = np.zeros((self.input_dim, self.hidden_layer_dim))\n",
+    "        self.b = 0.05 * np.random.randn(self.input_dim)\n",
+    "        self.c = 0.05 * np.random.randn(self.hidden_layer_dim)\n",
+    "        self.w = 0.05 * np.random.randn(self.input_dim, self.hidden_layer_dim)\n",
     "                    \n",
     "    def fit(self, X, y, X_t, y_t, wandb_log = False):\n",
     "        self.input_dim = X.shape[1]\n",
@@ -118,10 +125,11 @@
     "        \n",
     "        num_bars = 30\n",
     "        \n",
+    "        batch_size = 64\n",
+    "        \n",
     "        for ep in range(self.epochs):\n",
     "            print('Epoch ', ep + 1, '/', self.epochs)\n",
     "            \n",
-    "            batch_size = 64\n",
     "            n_inputs = X.shape[0]\n",
     "            n_bars = 30\n",
     "            \n",
@@ -138,6 +146,7 @@
     "            print()\n",
     "            \n",
     "            hid = self.get_hidden(X)\n",
+    "            \n",
     "            self.clf.fit(hid, np.asnumpy(y))\n",
     "            \n",
     "            hid_t = self.get_hidden(X_t)\n",
@@ -158,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "honest-acquisition",
+   "id": "single-rochester",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "balanced-portal",
+   "id": "cooked-disposition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "proof-wellington",
+   "id": "alive-train",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chubby-comfort",
+   "id": "sensitive-wilson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,10 +242,74 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "frequent-baltimore",
+   "id": "forty-coaching",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Sweep Configuration of hyperparameters\n",
+    "\n",
+    "sweep_config = {\n",
+    "    'method': 'bayes',\n",
+    "    'metric': {\n",
+    "        'name': 'Test Accuracy',\n",
+    "        'goal': 'maximize'\n",
+    "    },\n",
+    "    'parameters': {\n",
+    "        'hidden_layer_dim': {\n",
+    "            'values': [ 64, 128, 256],\n",
+    "        },\n",
+    "        'num_steps': {\n",
+    "            'values': [1, 5, 10]\n",
+    "        },\n",
+    "        'num_epochs': {\n",
+    "            'values': [15, 20, 25]\n",
+    "        },\n",
+    "        'learning_rate' : {\n",
+    "            'values': [0.001, 0.01, 0.1]\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "disabled-lobby",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sweep_id = wandb.sweep(sweep_config, entity = '0x2e4', project = 'cs6910-a4')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "attended-passport",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run():\n",
+    "    default_config = {'hidden_layer_dim': 64, 'num_steps': 10, 'num_epochs': 5, 'learning_rate' : 0.001}\n",
+    "\n",
+    "    run = wandb.init(project='cs6910-a4', config=default_config)\n",
+    "    config = wandb.config\n",
+    "\n",
+    "    model = RBNClassifier(hidden_layer_dim=config.hidden_layer_dim, k = config.markov_steps, r = config.num_samples, epochs = config.num_epochs, learning_rate = config.learning_rate)\n",
+    "\n",
+    "    model.fit(X_train_new, Y_train, X_test_new, np.asnumpy(Y_test), True)\n",
+    "    \n",
+    "    wandb.agent(sweep_id, run)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fewer-loading",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wandb.agent(sweep_id, run)"
+   ]
   }
  ],
  "metadata": {
