--- a/Assignment 4/RBN.ipynb
+++ b/Assignment 4/RBN.ipynb
@@ -9,11 +9,12 @@
    "source": [
     "# Imports\n",
     "\n",
-    "import cupy as np\n",
+    "import numpy as np\n",
     "from tensorflow.keras.datasets import fashion_mnist, mnist\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.manifold import TSNE\n",
     "import seaborn as sn\n",
     "import wandb"
    ]
@@ -78,7 +79,7 @@
     "    \n",
     "    def get_hidden(self, X):\n",
     "        probs = np.sign(sig(np.matmul(X, self.w) + self.c))\n",
-    "        return np.asnumpy(np.random.binomial(1, probs, probs.shape))\n",
+    "        return np.random.binomial(1, probs, probs.shape)\n",
     "    \n",
     "    def simulate_markov(self, X):\n",
     "        if self.sampling == 'Gibbs':\n",
@@ -100,7 +101,7 @@
     "            if self.sampling == 'Gibbs' or t + 1 == self.num_steps:\n",
     "                v_list.append(v)\n",
     "            \n",
-    "        return np.array(v_list)\n",
+    "        return np.array(v_list) if self.sampling == 'Gibbs' else np.array(v_list[0])\n",
     "    \n",
     "    def single_update(self, x, all_v):\n",
     "    \n",
@@ -113,41 +114,67 @@
     "        self.w += self.learning_rate * (mat_x - mat_all_v.mean(axis=0))\n",
     "        self.b += self.learning_rate * (x - all_v.mean(axis=0))\n",
     "        self.c += self.learning_rate * (transf_x - transf_all_v.mean(axis=0))\n",
+    "    \n",
+    "    def batch_update(self, X, all_v):\n",
+    "    \n",
+    "        transf_all_v = sig(np.matmul(all_v, self.w) + self.c)\n",
+    "        mat_all_v = np.matmul(all_v.reshape((X.shape[0], self.input_dim, 1)), transf_all_v.reshape((X.shape[0], 1, self.hidden_layer_dim)))\n",
+    "        \n",
+    "        transf_x = sig(np.matmul(X, self.w) + self.c)\n",
+    "        mat_x = np.matmul(X.reshape((X.shape[0], self.input_dim, 1)), transf_x.reshape((X.shape[0], 1, self.hidden_layer_dim)))\n",
+    "        \n",
+    "        self.w += self.learning_rate * (mat_x - mat_all_v).mean(axis=0)\n",
+    "        self.b += self.learning_rate * (X - all_v).mean(axis=0)\n",
+    "        self.c += self.learning_rate * (transf_x - transf_all_v).mean(axis=0)\n",
     "        \n",
     "    def weights_init(self):\n",
     "        self.b = 0.05 * np.random.randn(self.input_dim)\n",
     "        self.c = 0.05 * np.random.randn(self.hidden_layer_dim)\n",
     "        self.w = 0.05 * np.random.randn(self.input_dim, self.hidden_layer_dim)\n",
     "                    \n",
-    "    def fit(self, X, y, X_t, y_t, wandb_log = False):\n",
+    "    def fit(self, X, y, X_t, y_t, wandb_log = False, plot_img = False):\n",
     "        self.input_dim = X.shape[1]\n",
     "        self.weights_init()\n",
     "        \n",
     "        num_bars = 30\n",
+    "        n_grids = 64\n",
+    "        prev_grid = -1\n",
     "        \n",
-    "        batch_size = 64\n",
+    "        batch_size = 64 if self.sampling == 'Gibbs' else 16\n",
     "        \n",
     "        for ep in range(self.epochs):\n",
     "            print('Epoch ', ep + 1, '/', self.epochs)\n",
     "            \n",
     "            n_inputs = X.shape[0]\n",
-    "            n_bars = 30\n",
+    "            if plot_img:\n",
+    "                n_inputs = 64\n",
+    "                batch_size = 1\n",
     "            \n",
     "            for ii in range(0, n_inputs, batch_size):\n",
     "                X_curr = X[ii:ii + batch_size]\n",
-    "            \n",
-    "                all_v = self.simulate_markov(X_curr).swapaxes(0, 1)\n",
     "                \n",
-    "                for jj, x in enumerate(X_curr):\n",
-    "                    self.single_update(x, all_v[jj])\n",
+    "                if self.sampling == 'Gibbs':\n",
+    "                    all_v = self.simulate_markov(X_curr).swapaxes(0, 1)\n",
+    "                    for jj, x in enumerate(X_curr):\n",
+    "                        self.single_update(x, all_v[jj])\n",
+    "                else:\n",
+    "                    all_v = self.simulate_markov(X_curr)\n",
+    "                    self.batch_update(X_curr, all_v)\n",
     "                \n",
     "                curr = (num_bars * (ii + 1)) // n_inputs\n",
     "                print('\\r[' + '=' * curr + '.' * (num_bars - curr) + ']', end = '')\n",
+    "                \n",
+    "                if plot_img:\n",
+    "                    curr_grid = (n_grids * (ii + 1)) // n_inputs\n",
+    "                    if curr_grid > prev_grid:\n",
+    "                        ax = plt.subplot(8, 8, curr_grid)\n",
+    "                        ax.imshow(all_v[0].reshape((28, 28)))\n",
+    "                        prev_grid = curr_grid\n",
     "            print()\n",
     "            \n",
     "            hid = self.get_hidden(X)\n",
     "            \n",
-    "            self.clf.fit(hid, np.asnumpy(y))\n",
+    "            self.clf.fit(hid, y)\n",
     "            \n",
     "            hid_t = self.get_hidden(X_t)\n",
     "            \n",
@@ -158,6 +185,7 @@
     "            \n",
     "            if wandb_log:\n",
     "                wandb.log({'Test Accuracy' : test_acc, 'Test Loss' : test_loss})\n",
+    "            \n",
     "    \n",
     "    def predict(self, X):\n",
     "        hid = self.get_hidden(X)\n",
@@ -224,9 +252,7 @@
     "\n",
     "    model = RBNClassifier(hidden_layer_dim=config.hidden_layer_dim, k = config.markov_steps, r = config.num_samples, epochs = config.num_epochs, learning_rate = config.learning_rate)\n",
     "\n",
-    "    model.fit(X_train_new, Y_train, X_test_new, np.asnumpy(Y_test), True)\n",
-    "    \n",
-    "    wandb.agent(sweep_id, run)"
+    "    model.fit(X_train_new, Y_train, X_test_new, Y_test, True)"
    ]
   },
   {
@@ -242,7 +268,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "forty-coaching",
+   "id": "graduate-treatment",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_model = RBNClassifier(hidden_layer_dim = 128, k = 200, r = 10, learning_rate = 0.01, epochs = 3)\n",
+    "best_model.fit(X_train_new, Y_train, X_test_new, Y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "roman-armenia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "disabled-lobby",
+   "id": "circular-celebrity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "attended-passport",
+   "id": "reasonable-abuse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,22 +331,91 @@
     "    run = wandb.init(project='cs6910-a4', config=default_config)\n",
     "    config = wandb.config\n",
     "\n",
-    "    model = RBNClassifier(hidden_layer_dim=config.hidden_layer_dim, k = config.markov_steps, r = config.num_samples, epochs = config.num_epochs, learning_rate = config.learning_rate)\n",
+    "    model = RBNClassifier(hidden_layer_dim=config.hidden_layer_dim, r = config.num_steps, epochs = config.num_epochs, learning_rate = config.learning_rate, sampling = 'CD')\n",
     "\n",
-    "    model.fit(X_train_new, Y_train, X_test_new, np.asnumpy(Y_test), True)\n",
-    "    \n",
-    "    wandb.agent(sweep_id, run)"
+    "    model.fit(X_train_new, Y_train, X_test_new, Y_test, True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fewer-loading",
+   "id": "charitable-chocolate",
    "metadata": {},
    "outputs": [],
    "source": [
     "wandb.agent(sweep_id, run)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "painful-belly",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Generated Images\n",
+    "\n",
+    "best_model_CD = RBNClassifier(hidden_layer_dim = 256, r = 1, learning_rate = 0.1, epochs = 1, sampling = 'CD')\n",
+    "plt.figure(figsize = [20, 20])\n",
+    "best_model_CD.fit(X_train_new, Y_train, X_test_new, Y_test, plot_img = True)\n",
+    "#plt.show()\n",
+    "wandb.init(project='cs6910-a4')\n",
+    "wandb.log({\"Generated Images\" : wandb.Image(plt)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "pretty-fusion",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Running the best model\n",
+    "\n",
+    "best_model_CD = RBNClassifier(hidden_layer_dim = 256, r = 1, learning_rate = 0.1, epochs = 15, sampling = 'CD')\n",
+    "best_model_CD.fit(X_train_new, Y_train, X_test_new, Y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "asian-notebook",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fitting to TSNE\n",
+    "\n",
+    "hid = best_model_CD.get_hidden(X_test_new)\n",
+    "hid_T = TSNE(n_components = 2).fit_transform(hid)\n",
+    "hid_T.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "operational-reliance",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TSNE Plot\n",
+    "\n",
+    "plt_x, plt_y = hid_T[:, 0], hid_T[:, 1]\n",
+    "plt.figure(figsize = [20, 20])\n",
+    "plt.scatter(plt_x, plt_y, c = Y_test, alpha=0.5)\n",
+    "#plt.show()\n",
+    "wandb.init(project='cs6910-a4')\n",
+    "wandb.log({\"TSNE Plot\" : wandb.Image(plt)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "protective-better",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
